feat: keycloak connections and configs